<resources>
    <string name="app_name">MusixMatch Track Search</string>
    <string name="enter_keyword">Enter a keyword</string>
    <string name="btn_finish">Finish</string>
    <string name="search_keyword">Search Keyword</string>
    <string name="limit">Limit :</string>
    <string name="btn_search">Search</string>
    <string name="sort_by">Sort by:</string>
    <string name="track_rating">Track rating</string>
    <string name="artist_rating">Artist rating</string>
    <string name="results"> Search Results</string>
</resources>
