<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <EditText
        android:id="@+id/et_keyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_keyword"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/et_keyword"
        android:layout_alignParentTop="true"
        android:layout_marginTop="87dp"
        android:text="@string/limit" />

    <TextView
        android:id="@+id/tv_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="63dp"
        android:layout_marginBottom="0dp"
        android:text="5" />

    <SeekBar
        android:id="@+id/sb_limit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="109dp"
        android:layout_marginBottom="0dp" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="45dp"
        android:text="@string/btn_search" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/et_keyword"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="148dp"
        android:text="@string/sort_by" />



    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:text="@string/results" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_results"
        android:layout_width="350dp"
        android:layout_height="259dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/linlyt_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rv_results"
        android:layout_marginStart="102dp"
        android:layout_marginBottom="-202dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="50dp"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginStart="-96dp"
        android:layout_marginTop="-18dp"
        android:layout_toEndOf="@+id/button_search">

        <RadioButton
            android:id="@+id/rb_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/track_rating" />

        <RadioButton
            android:id="@+id/rb_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_rating" />


    </RadioGroup>


</RelativeLayout>